--- a/index.html
+++ b/index.html
@@ -33,42 +33,150 @@
 					  </ul>
 					</li>
 					<li><a href="#about"><span class="glyphicon glyphicon-question-sign"></span></a></li>
+					<li><a href="#resources"><span class="glyphicon glyphicon-th-list"></span></a></li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 	
 	<div id = "home" class = "note-container">
-		<div class="container well well-lg">
-			<h1> Home </h1>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
+		<div class="container well well-lg note-container">
+			<h1> Biopsychology </h1>
+			<p class="lead"> This page seeks to provide an introduction to the neural basis of sensory processes, motor control, emotion, and learning. </p>
+			<p>Through the notes here on neuroanatomy, neural signal transmission, sensory and motor neural systems and other selected topics in neuroscience, we seek to illustrate the relationship between brain function and behavior.</p>
 		</div>
 	</div>
 	
-	<div id = "neurons_and_neuroanatomy" class = "note-container">
-		<div class="container well well-lg">
+	<div id = "neurons_and_neuroanatomy" class="note-container">
+		<div class="container well well-lg note-container">
 			<h1>Neurons and Neuroanatomy</h1>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
+			<div class="well well-md">
+				<p class="lead">The Human Brain</p>
+				<ul>
+					<li>Weight: ~1.3 kg</li>
+					<li>Contains about 86 billion neurons and numerous glial cells.</li>
+					<li>Between these are around 100 trillion neural connections. Intelligence is roughly linked to the number of neural connections.</li>
+					<li>Brain activity accounts for about 20 to 25% of total metabolic expenditure for human beings.</li>
+				</ul>
+				<p class="lead">Divisions of the Nervous System</p>
+				<ul>
+					<li>
+						<p class="lead">Central Nervous System</p>
+						<p>The central nervous system consists of the brain and the spinal cord.</p>
+					</li>
+					<li>
+						<p class="lead">Peripheral Nervous System</p>
+						<p>All other neurons are considered part of the peripheral nervous system.</p>
+					</li>
+				</ul>
+				<p class="lead">Divisions of the Peripheral Nervous System</p>
+				<ul>
+					<li>
+						<p class="lead">Somatic Nervous System</p>
+						<p>The somatic nervous system consists of afferent (signal creating) and efferent (signal receiving) neurons.</p>
+					</li>
+					<li>
+						<p class="lead">Autonomic Nervous System</p>
+					</li>
+				</ul>
+				<p class="lead">Divisions of the Brain</p>
+				<ul>
+					<li>
+						<p class="lead">Forebrain</p>
+						<p>Consists of the telencephalon and the diencephalon.</p>
+					</li>
+					<li>
+						<p class="lead">Midbrain</p>
+						<p>Consists of the mesencephalon.</p>
+					</li>
+					<li>
+						<p class="lead">Hindbrain</p>
+						<p>Consists of the metencephalon and the myelencephalon.</p>
+					</li>
+					<li>
+						<p class="lead">Cerebral Cortex</p>
+						<p>Outer covering of the cerebral hemispheres.</p>
+					</li>
+					<li>
+						<p class="lead">Subcortical Areas</p>
+						<p>Hippocampus, hypothalamus, amygdala, thalamus, etc.</p>
+					</li>
+				</ul>
+			</div>
+			<h1>Cells of the Nervous System</h1>
+			<div class="well well-md">
+				<p class="lead">Neurons are specialized cells that gather and transmit information through an electrochemical process.</p>
+				<p class="lead">Basic Structure of Neurons</p>
+				<ul>
+					<li>
+						<p><mark>Dendrites</mark> are processes coming from the cell body which receive most of the synaptic contacts from other neurons.</p>
+					</li>
+					<li>
+						<p>The <mark>cell body</mark> contains the nucleus and other organelles.</p>
+					</li>
+					<li>
+						<p><mark>Axons</mark> are long processes that project from the cell body.</p>
+					</li>
+					<li>
+						<p><mark>Synaptic terminals</mark> or <mark>terminal buttons</mark> are the endings of the axon. These store and release neurotransmitters in order to propagate a signal.</p>
+					</li>
+				</ul>
+				<p class="lead">Classification of Neurons</p>
+				<ul>
+					<li>
+						<p>Neurons can be classed by shape.</p>
+						<ul>
+							<li>
+								<p><mark>Unipolar</mark> neurons have just one process extending from their cell bodies. These are typically very rare neurons. An example of this type of neuron is the brush neuron in the ear- it is part of the vestibular system that helps us keep our balance.</p>
+							</li>
+							<li><p><mark>Bipolar</mark> neurons have two processes extending from their cell bodies. These are also very rare. An example of this type is the bipolar neuron found typically in the retna. These transmit visual information into a neural signal.</p>
+							</li>
+							<li>
+								<p><mark>Multipolar</mark> neurons have more than two processes extending from their cell bodies. Nearly all neurons are multipolar.</p>
+							</li>
+						</ul>
+					</li>
+					<li>
+						<p>Neurons can be classed by function.</p>
+						<ul>
+							<li>
+								<p><mark>Sensory neurons</mark> are afferent neurons that carry signals from the peripheral nervous system into the central nervous system.</p>
+							</li>
+							<li>
+								<p><mark>Motor neurons</mark> are efferent neurons that carry signals from the central nervous system into the peripheral nervous system.</p>
+							</li>
+							<li>
+								<p><mark>Interneurons</mark> are signal repeaters. They transmit signals between neurons within a single brain structure.</p>
+							</li>
+						</ul>
+					</li>
+				</ul>
+				<p class="lead">Glia / Glial Cells</p>
+				<ul>
+					<li>Glial cells are small and very numerous. They do not directly participate in the nervous system as neurons do.</li>
+					<li>They perform support functions, such as forming myelin sheaths, removing debris, and exchanging chemicals with neurons.</li>
+					<li>Classification</li>
+					<ul>
+						<li> 
+							<p><mark>Oligodendrocytes</mark> create the myelin sheaths that surround strong neural connections in the central nervous system.</p>
+						</li>
+						<li>
+							<p><mark>Schwann cells</mark> act as the oligodendrocytes, but in the peripheral nervous system. Schwann cells can guide axonal regeneration.</p>
+						</li>
+						<li>
+							<p><mark>Astrocytes</mark> are the largest glia. They are star-shaped and have a variety of functions.</p>
+						</li>
+						<li>
+							<p><mark>Microglia</mark> are involved in responses to disease or injury within the brain.</p>
+						</li>
+					</ul>
+				</ul>
+			</div>
+			
+			
+			
+			
+			<p class="lead"></p>
 		</div>
 	</div>
 	
@@ -84,6 +192,12 @@
 			<p> Words words words </p>
 			<p> Words words words </p>
 			<p> Words words words </p>
+		</div>
+	</div>
+	<div id = "resources" class = "note-container">
+		<div class="container well well-lg">
+			<h1>Resources</h1>
+			<p class="lead"> These are some of the many resources consulted in the construction of this website. </p>
 		</div>
 	</div>
   </body>
