--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="utf-8"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<style>
+		.well {
+			border-color: rgba(50,50,50,.15);
+		}
 		.note-container {
-			width: 70%;
+			width: 49%;
 			margin: 0 auto;
 			
 			display: flex;
@@ -13,8 +18,22 @@
 			flex-wrap: wrap;
 			justify-content: center;
 			align-items: center;
+			background: rgb(90, 90, 90);
+			color: rgb(220, 210, 190);
+			margin-top: 10px;
+			margin-bottom: 10px;
 		}
-		body { padding-top: 70px; }
+		mark {
+			background-color: rgb(210, 200, 200);
+			color: rgb(20, 10, 10);
+		}
+		
+		.note-container-inner {
+			background: rgb(190, 180, 180);
+			color: rgb(40, 40, 40);
+		}
+		body { padding-top: 70px;
+				background: rgb(40, 40, 40); }
 	</style>
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -39,18 +58,20 @@
 		</div>
 	</nav>
 	
-	<div id = "home" class = "note-container">
+	<div id = "home" >
 		<div class="container well well-lg note-container">
 			<h1> Biopsychology </h1>
-			<p class="lead"> This page seeks to provide an introduction to the neural basis of sensory processes, motor control, emotion, and learning. </p>
-			<p>Through the notes here on neuroanatomy, neural signal transmission, sensory and motor neural systems and other selected topics in neuroscience, we seek to illustrate the relationship between brain function and behavior.</p>
+			<div class="note-container-inner well well-md">
+				<p class="lead"> This page seeks to provide an introduction to the neural basis of sensory processes, motor control, emotion, and learning. </p>
+				<p>Through the notes here on neuroanatomy, neural signal transmission, sensory and motor neural systems and other selected topics in neuroscience, we seek to illustrate the relationship between brain function and behavior.</p>
+			</div>
 		</div>
 	</div>
 	
-	<div id = "neurons_and_neuroanatomy" class="note-container">
+	<div id = "neurons_and_neuroanatomy">
 		<div class="container well well-lg note-container">
 			<h1>Neurons and Neuroanatomy</h1>
-			<div class="well well-md">
+			<div class="note-container-inner well well-md">
 				<p class="lead">The Human Brain</p>
 				<ul>
 					<li>Weight: ~1.3 kg</li>
@@ -104,7 +125,7 @@
 				</ul>
 			</div>
 			<h1>Cells of the Nervous System</h1>
-			<div class="well well-md">
+			<div class="well well-md note-container-inner">
 				<p class="lead">Neurons are specialized cells that gather and transmit information through an electrochemical process.</p>
 				<p class="lead">Basic Structure of Neurons</p>
 				<ul>
@@ -180,9 +201,9 @@
 		</div>
 	</div>
 	
-	<div id = "about" class = "note-container">
-		<div class="container well well-lg">
+	<div id = "about" class = "container well well-lg note-container">
 			<h1>About</h1>
+		<div class="container well well-lg note-container-inner">
 			<p> Words words words </p>
 			<p> Words words words </p>
 			<p> Words words words </p>
@@ -194,18 +215,15 @@
 			<p> Words words words </p>
 		</div>
 	</div>
-	<div id = "resources" class = "note-container">
-		<div class="container well well-lg">
+	<div id = "resources" class = "container well well-lg note-container">
 			<h1>Resources</h1>
+		<div class="container well well-lg note-container-inner">
 			<p class="lead"> These are some of the many resources consulted in the construction of this website. </p>
 		</div>
 	</div>
   </body>
 </div>
 </html>
-
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
