Overhauled CSS / color scheme, added title, added GWT meta tag. Separated stylesheets. Added about section.

--- a/index.html
+++ b/index.html
@@ -3,38 +3,11 @@
   <head>
     <meta charset="utf-8"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- Latest compiled and minified CSS -->
+	<meta name="google-site-verification" content="SgwqxjxT1RR7uf1-qn2Y_hOZId25l25XZTLOX4vwQHI" />
+	<title>Learn About Biopsychology</title>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<style>
-		.well {
-			border-color: rgba(50,50,50,.15);
-		}
-		.note-container {
-			width: 49%;
-			margin: 0 auto;
-			
-			display: flex;
-			flex-direction: row;
-			flex-wrap: wrap;
-			justify-content: center;
-			align-items: center;
-			background: rgb(90, 90, 90);
-			color: rgb(220, 210, 190);
-			margin-top: 10px;
-			margin-bottom: 10px;
-		}
-		mark {
-			background-color: rgb(210, 200, 200);
-			color: rgb(20, 10, 10);
-		}
-		
-		.note-container-inner {
-			background: rgb(190, 180, 180);
-			color: rgb(40, 40, 40);
-		}
-		body { padding-top: 70px;
-				background: rgb(40, 40, 40); }
-	</style>
+	<link rel="stylesheet" href="./style.css">
+
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
 	<nav class="navbar navbar-default navbar-fixed-top">
@@ -124,6 +97,8 @@
 					</li>
 				</ul>
 			</div>
+		</div>
+		<div class="container well well-lg note-container">
 			<h1>Cells of the Nervous System</h1>
 			<div class="well well-md note-container-inner">
 				<p class="lead">Neurons are specialized cells that gather and transmit information through an electrochemical process.</p>
@@ -204,15 +179,7 @@
 	<div id = "about" class = "container well well-lg note-container">
 			<h1>About</h1>
 		<div class="container well well-lg note-container-inner">
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
-			<p> Words words words </p>
+			<p class = "lead">This website was built to help teach other people about the ins and outs of biopsychology, neuron structure, neurotransmitters, and so on. All people stand to benefit from a better understanding of their mind and body. If you enjoyed this biopsychology website, be sure to visit <a href="http://clotifoth.github.io/">my personal website</a> to view my other projects.</p>
 		</div>
 	</div>
 	<div id = "resources" class = "container well well-lg note-container">
